# sanitizer-bot

./: .gitignore  README  README.md
kill_virus/: CMakeLists.txt  package.xml
kill_virus/src/: disinfection.py
launch/: sanitizer_bot.launch
localization/: CMakeLists.txt  package.xml
localization/launch/: localization.launch
localization/msg/: local.msg
localization/src/: localization.py  localization_exec.py
sanitizer_launch/: CMakeLists.txt  package.xml
sanitizer_launch/launch/: map_generation.launch  sanitizer_bot.launch
sanitizer_navigation/: CMakeLists.txt  package.xml
sanitizer_navigation/launch/: disinfection.launch
sanitizer_navigation/src/: disinfection.py  rooms.txt
simple_navigation_goals/: package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
uv_map/: CMakeLists.txt  package.xml
uv_map/launch/: visualization.launch
uv_visualization/: CMakeLists.txt  package.xml
uv_visualization/launch/: turtlebot3_navigation.launch  uv_demo.launch  visualization.launch
uv_visualization/msg/: lowestIrradiation.msg
uv_visualization/src/: uv_grid_map.cpp
